// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListItem
    child={
      Array [
        Object {
          "text": "Hola",
        },
      ]
    }
    classes={
      Object {
        "bulletContainer": "bulletContainer",
        "crossedLetter": "crossedLetter",
        "italicLetter": "italicLetter",
        "liWrapper": "liWrapper",
        "underlinedLetter": "underlinedLetter",
      }
    }
    hierarchy={0}
    icon="bullet"
    iconColor="#222222"
    size="bs"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Jss(Flexbox)
        direction="col"
        display="flex"
        style={Object {}}
      >
        <Jss(Flexbox)
          alignItems="start"
          display="inline-flex"
        >
          <div
            className="bulletContainer"
          >
            <Jss(Icon)
              className={undefined}
              colors={
                Array [
                  "#222222",
                ]
              }
              height={24}
              iconName="bullet"
              transition="0.3s all"
              width={24}
            />
          </div>
          <Jss(Text)
            heading={false}
            headline={false}
            large={false}
            low={false}
            micro={false}
            mid={false}
            small={false}
            standard={false}
            subheading={false}
            tag="p"
            white={false}
          />
        </Jss(Flexbox)>
      </Jss(Flexbox)>,
      "className": "undefined liWrapper",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Jss(Flexbox)
          alignItems="start"
          display="inline-flex"
        >
          <div
            className="bulletContainer"
          >
            <Jss(Icon)
              className={undefined}
              colors={
                Array [
                  "#222222",
                ]
              }
              height={24}
              iconName="bullet"
              transition="0.3s all"
              width={24}
            />
          </div>
          <Jss(Text)
            heading={false}
            headline={false}
            large={false}
            low={false}
            micro={false}
            mid={false}
            small={false}
            standard={false}
            subheading={false}
            tag="p"
            white={false}
          />
        </Jss(Flexbox)>,
        "direction": "col",
        "display": "flex",
        "style": Object {},
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "alignItems": "start",
          "children": Array [
            <div
              className="bulletContainer"
            >
              <Jss(Icon)
                className={undefined}
                colors={
                  Array [
                    "#222222",
                  ]
                }
                height={24}
                iconName="bullet"
                transition="0.3s all"
                width={24}
              />
            </div>,
            <Jss(Text)
              heading={false}
              headline={false}
              large={false}
              low={false}
              micro={false}
              mid={false}
              small={false}
              standard={false}
              subheading={false}
              tag="p"
              white={false}
            />,
          ],
          "display": "inline-flex",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Icon)
                className={undefined}
                colors={
                  Array [
                    "#222222",
                  ]
                }
                height={24}
                iconName="bullet"
                transition="0.3s all"
                width={24}
              />,
              "className": "bulletContainer",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "className": undefined,
                "colors": Array [
                  "#222222",
                ],
                "height": 24,
                "iconName": "bullet",
                "transition": "0.3s all",
                "width": 24,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "heading": false,
              "headline": false,
              "large": false,
              "low": false,
              "micro": false,
              "mid": false,
              "small": false,
              "standard": false,
              "subheading": false,
              "tag": "p",
              "white": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Jss(Flexbox)
          direction="col"
          display="flex"
          style={Object {}}
        >
          <Jss(Flexbox)
            alignItems="start"
            display="inline-flex"
          >
            <div
              className="bulletContainer"
            >
              <Jss(Icon)
                className={undefined}
                colors={
                  Array [
                    "#222222",
                  ]
                }
                height={24}
                iconName="bullet"
                transition="0.3s all"
                width={24}
              />
            </div>
            <Jss(Text)
              heading={false}
              headline={false}
              large={false}
              low={false}
              micro={false}
              mid={false}
              small={false}
              standard={false}
              subheading={false}
              tag="p"
              white={false}
            />
          </Jss(Flexbox)>
        </Jss(Flexbox)>,
        "className": "undefined liWrapper",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Jss(Flexbox)
            alignItems="start"
            display="inline-flex"
          >
            <div
              className="bulletContainer"
            >
              <Jss(Icon)
                className={undefined}
                colors={
                  Array [
                    "#222222",
                  ]
                }
                height={24}
                iconName="bullet"
                transition="0.3s all"
                width={24}
              />
            </div>
            <Jss(Text)
              heading={false}
              headline={false}
              large={false}
              low={false}
              micro={false}
              mid={false}
              small={false}
              standard={false}
              subheading={false}
              tag="p"
              white={false}
            />
          </Jss(Flexbox)>,
          "direction": "col",
          "display": "flex",
          "style": Object {},
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alignItems": "start",
            "children": Array [
              <div
                className="bulletContainer"
              >
                <Jss(Icon)
                  className={undefined}
                  colors={
                    Array [
                      "#222222",
                    ]
                  }
                  height={24}
                  iconName="bullet"
                  transition="0.3s all"
                  width={24}
                />
              </div>,
              <Jss(Text)
                heading={false}
                headline={false}
                large={false}
                low={false}
                micro={false}
                mid={false}
                small={false}
                standard={false}
                subheading={false}
                tag="p"
                white={false}
              />,
            ],
            "display": "inline-flex",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Icon)
                  className={undefined}
                  colors={
                    Array [
                      "#222222",
                    ]
                  }
                  height={24}
                  iconName="bullet"
                  transition="0.3s all"
                  width={24}
                />,
                "className": "bulletContainer",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": undefined,
                  "colors": Array [
                    "#222222",
                  ],
                  "height": 24,
                  "iconName": "bullet",
                  "transition": "0.3s all",
                  "width": 24,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "heading": false,
                "headline": false,
                "large": false,
                "low": false,
                "micro": false,
                "mid": false,
                "small": false,
                "standard": false,
                "subheading": false,
                "tag": "p",
                "white": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ListItem styles matches the snapshot 1`] = `
Object {
  "bulletContainer": Object {
    "alignItems": "center",
    "backgroundRepeat": "no-repeat",
    "display": "inline-flex",
    "marginRight": 8,
  },
  "crossedLetter": Object {
    "textDecoration": "line-through",
  },
  "italicLetter": Object {
    "fontStyle": "italic !important",
  },
  "liWrapper": Object {
    "listStyle": "none",
  },
  "underlinedLetter": Object {
    "textDecoration": "underline",
  },
}
`;

exports[`ListItemJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(ListItem)
    child={
      Array [
        Object {
          "text": "Hola",
        },
      ]
    }
    hierarchy={0}
    icon="bullet"
    iconColor="#222222"
    size="bs"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "child": Array [
        Object {
          "text": "Hola",
        },
      ],
      "classes": Object {
        "bulletContainer": "ListItem-bulletContainer-0-1-80",
        "crossedLetter": "ListItem-crossedLetter-0-1-83",
        "italicLetter": "ListItem-italicLetter-0-1-82",
        "liWrapper": "ListItem-liWrapper-0-1-81",
        "underlinedLetter": "ListItem-underlinedLetter-0-1-84",
      },
      "hierarchy": 0,
      "icon": "bullet",
      "iconColor": "#222222",
      "size": "bs",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "child": Array [
          Object {
            "text": "Hola",
          },
        ],
        "classes": Object {
          "bulletContainer": "ListItem-bulletContainer-0-1-80",
          "crossedLetter": "ListItem-crossedLetter-0-1-83",
          "italicLetter": "ListItem-italicLetter-0-1-82",
          "liWrapper": "ListItem-liWrapper-0-1-81",
          "underlinedLetter": "ListItem-underlinedLetter-0-1-84",
        },
        "hierarchy": 0,
        "icon": "bullet",
        "iconColor": "#222222",
        "size": "bs",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
